--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -12,6 +12,7 @@ $breakpoint-tablet-landscape: 1024px;
 $body-background-color: #FFF;
 $body-text-family:Verdana, Geneva, sans-serif;
 $body-text-color: #000;
+$body-inner-padding: 16px;
 
 // Root
 
